# test-opora-standart

./: README.md  TASK.md  pyproject.toml
src/: file_finder.py  server.py
