[tool.poetry]
name = "test-opora-standart"
version = "0.1.0"
description = ""
authors = ["Emil Muhitdinov <laizybot@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mcp = {extras = ["cli"], version = "^1.4.1"}
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
